# tp-status

./: README.md  pyproject.toml
.tx/: config
data/: se.danielnylander.tp-status.desktop
po/: sv.mo  sv.po  tp-status.pot
src/tp_status/: __init__.py  __main__.py  app.py  scraper.py
