[project]
name = "tp-status"
version = "0.2.0"
description = "Translation Project status viewer"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]

[project.scripts]
tp-status = "tp_status.app:main"
